<resources>
    <string name="app_name">HelloFriend</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="hint">Hint</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="change_contact">Change contact</string>
    <string name="fmi_group">fmi group</string>
    <string name="example_phone">088888888</string>
</resources>